@startuml

enum Roles {
    superUser
    normalUser
}

class User{
    firstName : String
    surname : String
    username : String
    email : String
    password : String
    isPremium : boolean
}

class Group {
    name : String
}

class Media {
    media_type : String
    file_name : String
    file_path : String
    file_size : String
    upload_time : LocalDateTime
    description : String
}

class Post {
    name : String
    text : String
    voice-record : String
    video : String
    dateOfCreation : Date
}

class Capsule {
    dateOfOpening : Date
    open : boolean
}

class Memory {

}

Memory --|> Post : is >
Capsule  --|> Post : is >
Media "0.*" --* "1" Post : has

User -- Roles
User "1" --* "0.*" Group : create >
User "0.*" --* "0.*" Group : has >
User "1" --* "0.*" Post : create >
Group "1" --o "0.*" Post : has >

@enduml